# dm-log

./: CMakeLists.txt  README.md
include/: Log.h
src/: Log.cpp
src/android/: LogAndroid.cpp
src/apple/: LogIos.mm  LogMac.mm
src/linux/: LogLinux.cpp
